--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnextionStrings": {
+    "Default": "server=localhost; database=shiftscheduler; user id=sa; password=p@$$w0rd@1234;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
