Add port to server name in the connection string

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnextionStrings": {
-    "Default": "server=localhost; database=shiftscheduler; user id=sa; password=p@$$w0rd@1234;"
+    "Default": "server=localhost,1433; database=shiftscheduler; user id=sa; password=p@$$w0rd@1234;"
   },
   "Logging": {
     "LogLevel": {
